--- a/components/GoodsOrderList/GoodsOrderList.module.css
+++ b/components/GoodsOrderList/GoodsOrderList.module.css
@@ -75,9 +75,11 @@
     margin-top: 8px;
 }
 
-/* @media only screen and (min-width: 768px) {
-    
-} */
+@media only screen and (min-width: 768px) {
+    .container {
+        max-width: 704px;
+    }
+}
 
 /* @media only screen and (min-width: 1440px) {
 
